--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex;
+  place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -71,7 +71,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #440202;
+  color: #f5b6b6;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -92,6 +93,11 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
   }
+}
+.box_for_animation{
+  height: 100px;
+  width: 100px;
+  background-color: #535bf2;
 }
